<resources>
    <string name="app_name">MAXUS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_text">Username</string>
    <string name="add_match_text">Add Match</string>
    <string name="create_bet_text">Create Bet</string>
    <string name="set_bet_rate_text">Set Bet Rate</string>
    <string name="bet_history_text">Bet History</string>
    <string name="profit_shared_user_text">Profit Shared User</string>
    <string name="all_user_text">All Users</string>
    <string name="name_hint_text">Name</string>
    <string name="username_hint_text">Username</string>
    <string name="email_hint_text">Email</string>
    <string name="mobile_hint_text">Mobile</string>
    <string name="register_text">Register</string>
    <string name="password_hint_text">Password</string>
    <string name="confirm_password_hint_text">Confirm password</string>
    <string name="district_hint_text">District</string>
    <string name="upazilla_hint_text">Upazilla</string>
    <string name="up_hint_text">Union parisad</string>
    <string name="team1_hint_text">Team1 name</string>
    <string name="team2_hint_text">Team2 name</string>
    <string name="date_hint_text">Start Date</string>
    <string name="time_hint_text">Start Time</string>
    <string name="format_hint_text">Match format</string>
    <string name="match_type_text">Match Type</string>
    <string name="match_format_text">Match format</string>
    <string name="status_text">Status</string>
    <string name="question_text">Question</string>
    <string name="match_text">Match</string>
    <string name="bet_mode_text">Bet mode</string>
    <string name="option_text">Option</string>
    <string name="rate_text">Rate</string>
    <string name="user_type_text">User type</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
    <string name="club_username_hint_text">Club username</string>
    <string name="reference_hint_text">Reference</string>
    <string name="security_pin_hint_text">Security pin</string>
    <string name="agent_text">Agent</string>
    <string name="club_text">Club</string>
    <string name="normal_text">Normal</string>
    <string name="login_text">Login</string>
    <string name="home_text">Home</string>
    <string name="user_text">User</string>
    <string name="not_register_yet_register">Not register yet, <font color='red'>register</font></string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="place_bet_text">Place Bet</string>
    <string name="add_rate_text">Add Rate</string>
    <string name="classic_text">Classic</string>
    <string name="royal_text">Royal</string>
    <string name="add_bet_text">Add Bet</string>
    <string name="trade_text">Trade</string>
    <string name="advanced_text">Advanced</string>
    <string name="no_match_found_text">No match found</string>
    <string name="tournament_text">Tournament</string>
    <string name="rank_text">Rank</string>
    <string name="active_text">Active</string>
    <string name="address_text">Address</string>
    <string name="date_text">Date</string>
    <string name="amount_text">Amount</string>
    <string name="account_text">Account</string>
    <string name="balance_text">Balance</string>
    <string name="deposit_text">Deposit</string>
    <string name="withdraw_text">Withdraw</string>
    <string name="balance_transfer_text">Balance Transfer</string>
    <string name="send_request_btn_text">Send Request</string>
    <string name="profile_text">Profile</string>
    <string name="betting_text">Betting</string>
    <string name="action_logout">Logout</string>
    <string name="no_user_betting_text">Currently no user betting</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="change_password_text">Change Password</string>
    <string name="notification_text">Notification</string>
    <string name="user_request_text">Incoming Request</string>
    <string name="bonus_text">Bonus</string>
    <string name="from_username_text">From Username</string>
    <string name="transfer_done_text">Transfer Done</string>
    <string name="transactions_text">Transactions</string>
    <string name="ok_text">OK</string>
    <string name="see_all_text">See all</string>
    <string name="new_match_text">New Match</string>
    <string name="existing_match_text">Existing Match</string>
    <string name="currently_no_bets_running">Currently no bets running</string>
    <string name="return_amount_text">Return Amount</string>
    <string name="more_text">More</string>
    <string name="add_pin">Add new pin</string>
    <string name="pin_text">Pin</string>
    <string name="pin_owner_text">Pin owner</string>
    <string name="used_text">Used</string>
    <string name="add_text">Add</string>
    <string name="cancel_text">Cancel</string>
    <string name="no_user_found_text">No user found</string>
    <string name="logout_text">Logout</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="no_history_found_text">No history found</string>
    <string name="bonus_ranking_text_view">Bonus and Rank</string>
    <string name="assert_need_text">Assert Need</string>
    <string name="no_rank_text">No Ranking avaiable</string>
    <string name="purpose_text">Purpose</string>
    <string name="zero_bonus_text">Bonus: 0$</string>
    <string name="my_agent_text_view">My Agent</string>
    <string name="right_ans_text">Right Answer</string>
    <string name="pick_ans_text">Pick Answer</string>
    <string name="commission_text">Commission</string>
    <string name="admin_text">Admin</string>
    <string name="no_notification_found_text">No notificaiton found</string>
    <string name="no_bonus">No bonus</string>
    <string name="no_pin_found">No pin found</string>
    <string name="add_agent_text">Add Agent</string>
    <string name="shared_parcent">Shared Parcent</string>
    <string name="deactive_text">Deactivate</string>
    <string name="premium_text">Premium</string>
    <string name="current_user_betting">Current User Betting</string>
</resources>
