<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UpdateUserActivity">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/name_hint_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/username_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/email_hint_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mobile_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/mobile_hint_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/reference_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/reference_hint_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/agent_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/agent_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/district_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/district_hint_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/balance_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/advanced_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/rank_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/rank_text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/active_inactive_btn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center"
        android:text="@string/active_text" />
</LinearLayout>