<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity.LoginTypeActivity">

    <Button
        android:id="@+id/admin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_text"
        android:onClick="gotoLoginActivity"/>

    <Button
        android:id="@+id/club_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club_text"
        android:onClick="gotoLoginActivity"/>

    <Button
        android:id="@+id/agent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agent_text"
        android:onClick="gotoLoginActivity"/>

    <Button
        android:id="@+id/normal_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/normal_text"
        android:onClick="gotoLoginActivity"/>

</LinearLayout>