<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/pin_layout"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_list_item"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/pin_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:padding="10dp"
        android:text="@string/pin_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/user_type_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:padding="10dp"
        android:text="@string/user_type_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/pin_owner_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:padding="10dp"
        android:text="@string/pin_owner_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/used_text_view"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:text="@string/used_text"
        android:textSize="16sp" />

</LinearLayout>