<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.NotificationDetailsActivity">

    <TextView
        android:id="@+id/match_or_trans_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="@string/match_text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/from_or_question_text_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="@string/from_username_text" />

        <TextView
            android:id="@+id/from_or_question_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="@string/from_username_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/right_ans_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="" />

        <TextView
            android:id="@+id/email_or_right_ans_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="@string/email_hint_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/pick_and_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mobile_or_pick_ans_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="@string/mobile_hint_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/amount_text_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="@string/amount_text" />

        <TextView
            android:id="@+id/amount_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="@string/amount_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/return_amount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/return_amount_text_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="@string/return_amount_text" />

        <TextView
            android:id="@+id/return_amount_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="5dp"
            android:textSize="16sp"
            tools:text="@string/return_amount_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/status_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="@string/transfer_done_text" />

    <Button
        android:id="@+id/ok_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/ok_text" />
</LinearLayout>