<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="3dp"
    android:padding="3dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/rank_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:padding="10dp"
            android:text="@string/rank_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/assert_need_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/assert_need_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bonus_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/bonus_text"
            android:textSize="16sp" />

    </LinearLayout>
</android.support.v7.widget.CardView>